--- a/VCCrypto/VcCrypto.xcodeproj/xcshareddata/xcschemes/VCCryptoTestApp.xcscheme
+++ b/VCCrypto/VcCrypto.xcodeproj/xcshareddata/xcschemes/VCCryptoTestApp.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "92CDE7A924DC78DD00F95B5D"
-               BuildableName = "VCCrypto.framework"
-               BlueprintName = "VCCrypto"
+               BlueprintIdentifier = "92CDE7EC24DE1C6100F95B5D"
+               BuildableName = "VcCryptoTestApp.app"
+               BlueprintName = "VcCryptoTestApp"
                ReferencedContainer = "container:VCCrypto.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,29 +26,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES"
-      onlyGenerateCoverageForSpecifiedTargets = "YES">
-      <CodeCoverageTargets>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "92CDE7A924DC78DD00F95B5D"
-            BuildableName = "VCCrypto.framework"
-            BlueprintName = "VCCrypto"
-            ReferencedContainer = "container:VCCrypto.xcodeproj">
-         </BuildableReference>
-      </CodeCoverageTargets>
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "92CDE7B224DC78DD00F95B5D"
-               BuildableName = "VCCryptoTests.xctest"
-               BlueprintName = "VCCryptoTests"
-               ReferencedContainer = "container:VCCrypto.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -61,6 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "92CDE7EC24DE1C6100F95B5D"
+            BuildableName = "VcCryptoTestApp.app"
+            BlueprintName = "VcCryptoTestApp"
+            ReferencedContainer = "container:VCCrypto.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -68,15 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "92CDE7A924DC78DD00F95B5D"
-            BuildableName = "VCCrypto.framework"
-            BlueprintName = "VCCrypto"
+            BlueprintIdentifier = "92CDE7EC24DE1C6100F95B5D"
+            BuildableName = "VcCryptoTestApp.app"
+            BlueprintName = "VcCryptoTestApp"
             ReferencedContainer = "container:VCCrypto.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
