--- a/VCSerialization/VCSerialization.xcodeproj/xcshareddata/xcschemes/VCSerialization.xcscheme
+++ b/VCSerialization/VCSerialization.xcodeproj/xcshareddata/xcschemes/VCSerialization.xcscheme
@@ -3,7 +3,7 @@
    LastUpgradeVersion = "1150"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
+      parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "55D7BFE924C4CBBD0090F495"
-               BuildableName = "VCNetworking.framework"
-               BlueprintName = "VCNetworking"
-               ReferencedContainer = "container:VCNetworking.xcodeproj">
+               BlueprintIdentifier = "55CED0FC24CF37D000A2AAE2"
+               BuildableName = "VCSerialization.framework"
+               BlueprintName = "VCSerialization"
+               ReferencedContainer = "container:VCSerialization.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,27 +26,16 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES"
-      onlyGenerateCoverageForSpecifiedTargets = "YES">
-      <CodeCoverageTargets>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "55D7BFE924C4CBBD0090F495"
-            BuildableName = "VCNetworking.framework"
-            BlueprintName = "VCNetworking"
-            ReferencedContainer = "container:VCNetworking.xcodeproj">
-         </BuildableReference>
-      </CodeCoverageTargets>
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "55D7BFF224C4CBBD0090F495"
-               BuildableName = "VCNetworkingTests.xctest"
-               BlueprintName = "VCNetworkingTests"
-               ReferencedContainer = "container:VCNetworking.xcodeproj">
+               BlueprintIdentifier = "55CED10524CF37D000A2AAE2"
+               BuildableName = "VCSerializationTests.xctest"
+               BlueprintName = "VCSerializationTests"
+               ReferencedContainer = "container:VCSerialization.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,10 +60,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "55D7BFE924C4CBBD0090F495"
-            BuildableName = "VCNetworking.framework"
-            BlueprintName = "VCNetworking"
-            ReferencedContainer = "container:VCNetworking.xcodeproj">
+            BlueprintIdentifier = "55CED0FC24CF37D000A2AAE2"
+            BuildableName = "VCSerialization.framework"
+            BlueprintName = "VCSerialization"
+            ReferencedContainer = "container:VCSerialization.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
