--- a/sdk/Podfile
+++ b/sdk/Podfile
@@ -40,3 +40,9 @@ target 'VcCrypto' do
   vccrypto_pods
   target 'VcCryptoTests'
 end
+
+target 'VcJwt' do
+  project '../VcJwt/VcJwt.xcodeproj'
+  vccrypto_pods
+  target 'VcJwtTests'
+end
