--- a/sdk/Podfile
+++ b/sdk/Podfile
@@ -11,8 +11,12 @@ def networking_pods
   podspec :path => '../VCNetworking/VCNetworking.podspec'
 end
 
+def vcjwt_pods
+    podspec :path => '../VcJwt/VcJwt.podspec'
+end
+
 def vccrypto_pods
-  podspec :path => '../VCCrypto/VCCrypto.podspec'
+  podspec :path => '../VCCrypto/VcCrypto.podspec'
 end
 
 target 'sdk' do
@@ -31,18 +35,20 @@ end
 
 target 'VCSerialization' do
   project '../VCSerialization/VCSerialization.xcodeproj'
+  pod 'VcJwt', path: '../VcJwt'
   serialization_pods
   target 'VCSerializationTests'
 end
 
 target 'VcCrypto' do
-  project '../VcCrypto/VcCrypto.xcodeproj'
+  project '../VCCrypto/VcCrypto.xcodeproj'
   vccrypto_pods
   target 'VcCryptoTests'
 end
 
 target 'VcJwt' do
   project '../VcJwt/VcJwt.xcodeproj'
-  vccrypto_pods
+  pod 'VcCrypto', path: '../VCCrypto'
+  vcjwt_pods
   target 'VcJwtTests'
 end
