--- a/sdk/Podfile
+++ b/sdk/Podfile
@@ -4,7 +4,7 @@ platform :ios, '11.0'
 workspace '../sdk'
 
 def networking_pods
-  podspec :path => '../VCNetworking/VCNetworking.podspec'
+  podspec :path => '../VcNetworking/VcNetworking.podspec'
 end
 
 def vcjwt_pods
@@ -12,30 +12,30 @@ def vcjwt_pods
 end
 
 def vccrypto_pods
-  podspec :path => '../VCCrypto/VcCrypto.podspec'
+  podspec :path => '../VcCrypto/VcCrypto.podspec'
 end
 
 target 'sdk' do
   project '../sdk/sdk.xcodeproj'
-  pod 'VCNetworking', path: '../VCNetworking'
+  pod 'VcNetworking', path: '../VcNetworking'
   target 'sdkTests'
 end
 
-target 'VCNetworking' do
-  project '../VCNetworking/VCNetworking.xcodeproj'
+target 'VcNetworking' do
+  project '../VcNetworking/VcNetworking.xcodeproj'
   networking_pods
-  target 'VCNetworkingTests'
+  target 'VcNetworkingTests'
 end
 
 target 'VcCrypto' do
-  project '../VCCrypto/VcCrypto.xcodeproj'
+  project '../VcCrypto/VcCrypto.xcodeproj'
   vccrypto_pods
   target 'VcCryptoTests'
 end
 
 target 'VcJwt' do
   project '../VcJwt/VcJwt.xcodeproj'
-  pod 'VcCrypto', path: '../VCCrypto'
+  pod 'VcCrypto', path: '../VcCrypto'
   vcjwt_pods
   target 'VcJwtTests'
 end
