--- a/VcNetworking/VcNetworking.xcodeproj/xcshareddata/xcschemes/VcNetworking.xcscheme
+++ b/VcNetworking/VcNetworking.xcodeproj/xcshareddata/xcschemes/VcNetworking.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "55D7BFE924C4CBBD0090F495"
+            BuildableName = "VcNetworking.framework"
+            BlueprintName = "VcNetworking"
+            ReferencedContainer = "container:VcNetworking.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
