--- a/sdk/Podfile
+++ b/sdk/Podfile
@@ -3,6 +3,10 @@ use_frameworks!
 platform :ios, '11.0'
 workspace '../sdk'
 
+def vcusecases_pods
+  podspec :path => '../VCUseCases/VCUseCases.podspec'
+end
+
 def vcrepository_pods
   podspec :path => '../VCRepository/VCRepository.podspec'
 end
@@ -23,6 +27,15 @@ target 'sdk' do
   project '../sdk/sdk.xcodeproj'
   pod 'VcNetworking', path: '../VcNetworking'
   target 'sdkTests'
+end
+
+target 'VCUseCases' do
+  project '../VCUseCases/VCUseCases.xcodeproj'
+  vcusecases_pods
+  pod 'VCRepository', path: '../VCRepository'
+  pod 'VcNetworking', path: '../VcNetworking'
+  pod 'VcJwt', path: '../VcJwt'
+  target 'VCUseCasesTests'
 end
 
 target 'VCRepository' do
